2.2 regression: Qt: initial resizing issue
If start maximized with zoom of 2.0, the video is not centered.
It seems Windows Only
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Jean-Baptiste Kempf changed milestone to %2.2.x maintenance branch
changed milestone to %2.2.x maintenance branch
- Author Owner
Added attachment:
- Author Owner
Added attachment:
- Author Owner
Added attachment:
- Author Owner
So, it seems that a Window cannot have a size bigger than the screen size, because Qt5 decided that on Windows.
Catched it. What behaviour it should have?
- Author Owner
Well, it should resize to the request size (aka, movie size).
The issue is that Qt is reporting a different size than the one the widget actually has.
And it's Windows specific.
but if window will be bigger than screen size - does it has any meaning?
- Author Owner
That's a different topic. So far, VLC has worked like this, and should be fixed.
If the widget size is different than the actual size, this is wrong. It behaves correctly on Linux.
Moreover, you could have 2 screens or whatever weird configuration.
Improving this would be a good idea, but that's for later.
Ok, understand - will try to find workaround.
- Author Owner
That would be awesome.
Added attachment:
Fixed. Just override default maximum window size.
- Author Owner
That simple? I feel totally dumb
tbh, it's just workaround, and if you try play video more than 16k width/height - problem will back. But 16k is big enough I think.
- Jean-Baptiste Kempf added Status::fixed label
added Status::fixed label
- Jean-Baptiste Kempf closed
closed
commit b5a43deb Author: Sergey Radionov RSATom@gmail.com Date: Thu Jan 29 18:19:12 2015 +0100
Qt: force main window maximum size to be some big enough Close [#12852](https://code.videolan.org/videolan/vlc/-/issues/12852) Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>
Original author: RSATom@gmail.com
- Jean-Baptiste Kempf reopened
reopened
- Author Owner
Tester says the issue is still present.
- Jean-Baptiste Kempf removed Status::fixed label
removed Status::fixed label
Hm... Could them make screenshot?
maybe tester just expects Vlc window will fit to display, but it don't?
I think I found what's wrong. Now it's a problem with "Direct 3D video output". It's crop output to screen size, even if window is bigger. If use other video output module - all works fine.
Added attachment:
btw, mentioned above problem will appear even without any zoom. It will be enough open video bigger then screen size (for example 1920x1080 video on 1366x768 notebook screen )
I can see the issue on my system with HD videos, too. Why we doesn't handle it as in v2.1.x? If there the video width is wider than the screen, the video will be scaled down to the screen width.
Replying to [comment:18 da2424]:
Why we doesn't handle it as in v2.1.x? Ok, looks like a Qt5 problem, works with the Qt4 commit (1349ef2cd6e645e92e10ba32548704135fa25cc8)...
- Rémi Denis-Courmont changed title from Qt: initial resizing issue to 2.2 regression: Qt: initial resizing issue
changed title from Qt: initial resizing issue to 2.2 regression: Qt: initial resizing issue
- Author Owner
It's only in Qt5.
This bug appears to have been fixed indirectly.
- Jean-Baptiste Kempf added Status::fixed label
added Status::fixed label
- Jean-Baptiste Kempf changed milestone to %3.0 FF
changed milestone to %3.0 FF
- Jean-Baptiste Kempf closed
closed
- Author Owner
Milestone renamed