Qt: videos can no longer be larger than the screen

If an attempt is made to resize the video widget to a size larger than the screen,
it will be resized to a sensible size, filling the screen instead.

Close #12852

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>